created functionality to delete users

--- a/frontend/shopforhome/src/app/components/user/user.component.html
+++ b/frontend/shopforhome/src/app/components/user/user.component.html
@@ -22,6 +22,7 @@
             <td>
                 <input type="checkbox" [(ngModel)]="user.selected" (change)="updateSelectAllState()">
               </td>
+              <td>{{user.userId}}</td>
             <td>{{user.username}}</td>
             <td>{{user.email}}</td>
             <td>{{user.role}}</td>
