tried to fix outdoor issue

--- a/frontend/shopforhome/src/app/outdoors/outdoors.component.html
+++ b/frontend/shopforhome/src/app/outdoors/outdoors.component.html
@@ -19,7 +19,7 @@
           <img src="assets/images/{{product.name}}.jpg" class="card-img-top" alt="Outdoor Table Set">
           <div class="card-body">
             <h5 class="card-title">{{product.name}}</h5>
-            <p class="card-text">{{product.description}} | Price: {{product.price}} dollars</p>
+            <p class="card-text">{{product.description}} | Price: {{product.price}} dollars | {{product.counter}}</p>
 
             <button type="button" (click) = "onClickWishlist(product.productId)" class="btn">Add to Wishlist</button>
             <button type="submit" (click) = "onClickCart(product.productId, i)" class="btn">Add to Cart</button>
