--- a/frontend/shopforhome/src/app/components/cart/cart.component.html
+++ b/frontend/shopforhome/src/app/components/cart/cart.component.html
@@ -1,4 +1,7 @@
 <app-user-interface-header></app-user-interface-header>
+<head>
+  <link rel="stylesheet" href="cart.component.css">
+</head>
 <h1 class="text-center">Cart</h1>
 
 <div class="list-group">
@@ -17,12 +20,12 @@
       <p class="mb-1">{{item.description}}</p>
       <small>And some small print.</small>
     </a>
-    <button type="button" class="btn" style = "border-color: rgb(0, 0, 0);">Remove</button>
+    <button type="button" class="btn removeButton" (click) = "onRemoveCartItem(item.itemId)">Remove</button>
   </div>
 
 
 
 <div>
   <button type="submit" class="btn btn-primary">CheckOut</button>
-  <button type="reset">Clear Cart</button>
+  <button type="button" (click)="onClearCart()">Clear Cart</button>
 </div>
