--- a/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
+++ b/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
@@ -17,7 +17,7 @@
                             aria-labelledby="navbarDarkDropdownMenuLink">
                             <li><a class="dropdown-item" routerLink="/outdoors">Outdoors</a></li>
                             <li><a class="dropdown-item" href="/kitchen">Kitchen</a></li>
-                            <li><a class="dropdown-item" href="#">Living Room</a></li>
+                            <li><a class="dropdown-item" href="/living">Living Room</a></li>
                         </ul>
                     </ul>
                 </li>
