login issue fixed

--- a/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
+++ b/frontend/shopforhome/src/app/user-interface-header/user-interface-header.component.html
@@ -16,8 +16,8 @@
                         <ul class="dropdown-menu dropdown-menu-dark" ngbDropdownMenu
                             aria-labelledby="navbarDarkDropdownMenuLink">
                             <li><a class="dropdown-item" routerLink="/outdoors">Outdoors</a></li>
-                            <li><a class="dropdown-item" href="/kitchen">Kitchen</a></li>
-                            <li><a class="dropdown-item" href="/living">Living Room</a></li>
+                            <li><a class="dropdown-item" routerLink="/kitchen">Kitchen</a></li>
+                            <li><a class="dropdown-item" routerLink="/living">Living Room</a></li>
                         </ul>
                     </ul>
                 </li>
